# backnew

./: .env.example  .gitignore  .pre-commit-config.yaml  LOCAL_SETUP.md  RAILWAY_DEPLOY.md  README.md  docker-compose.yml  НАСТРОЙКА_SUPABASE.md
backend/: Dockerfile  pyproject.toml  requirements.txt  test_main.http
backend/src/: main.py
backend/src/app/: exceptions.py
backend/src/app/core/: permissions.py  security.py
backend/src/app/orm/: barrier_token.py  countries.py  hashtags.py  questions.py  subscriptions.py  user.py  waitlist.py
backend/src/app/schema/: countries.py  enums.py  hashtags.py  questions.py  search.py  similarity.py  statistics.py  subscriptions.py  user.py  waitlist.py
backend/src/app/services/: answers.py  hashtag_suggestion.py  hashtags.py  questions.py  search.py  similarity.py  statistics.py  subscription.py  user.py  waitlist.py
backend/src/app/services/email/: email.py  verification.py
backend/src/infrastructure/: database.py  lifespan.py  routes.py
backend/src/infrastructure/api/: countries.py  demo.py  dependencies.py  hashtags.py  questions.py  search.py  similarity.py  subscriptions.py  user_image.py  users.py
backend/src/infrastructure/api/auth/: barrier.py  google.py  jwt_utils.py  login.py  register.py  security.py  (+3 more)
backend/src/infrastructure/middleware/: register.py
backend/src/infrastructure/repository/: answers.py  hashtag.py  pending_registration.py  questions.py  subscriptions.py  user.py  user_settings.py  utils.py  waitlist.py
backend/src/settings/: email.py  general.py  pg.py  security.py  sql_alchemy.py
(+71 files in other folders)
